@@ -99,6 +99,7 @@ typedef struct {
     int paused;
     int draw_contents; /* set if bowl needs a full redraw next bowl_show() */
     int help_sx, help_sy, help_sw, help_sh; /* position of helping shadow */
+    int sdrop_pressed; /* 1 if soft drop in current cycle, 0 otherwise */
 
     int preview; /* 0 = no preview, otherwise number of pieces */
     int preview_sx, preview_sy; /* preview position */
